<resources>
    <string name="app_name">New account</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="default_notification_channel_id" translatable="false">default_channel</string>

    <string name="menu_home">Campus map</string>
    <string name="menu_subjects">Subjects</string>
    <string name="menu_calendar">Calendar</string>
    <string name="menu_contacts">Contacts</string>
    <string name="menu_things2do">Things to do</string>
    <string name="menu_transports">Transports</string>
    <string name="subjects">Subjects</string>
    <string name="calendar">Calendar</string>
    <string name="lodz">Lodz</string>
</resources>
